# jobba_statligt

./: README.md  pyproject.toml
scripts/: populate_filters.py
src/jobba_statligt/: __init__.py  constants.py  filter_options.py  job_advert.py  occupation.py  place.py
tests/: test_filter_options.py  test_search.py
