[project]
name = "jobba-statligt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "atomsforpeace", email = "1306402+AtomsForPeace@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "pydantic>=2.11.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.4",
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jobba_statligt"]
